k8s/tito/tito-sql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  generateName: titosql-
  labels:
    name: tito-sql
    version: "1.5"
    app: tito
    stage: prod
    tiers: tito-sql
spec:
  containers:
    - name: tito-sql
      image: harbor.pks-reg.gv/gv/tito-sql:latest
      ports:
      - containerPort: 3306
