k8s/tito/tito-fe-service.yml
apiVersion: v1
kind: Service
metadata:
  name: titofe-service
  labels:
    app: tito
    stage: prod
spec:
  ports:
  - name: http
    port: 80               # port expose par docker  (pas le port dans le container)
  selector:                     # key/value, label permettant de definir le pod cible (doit etre danslabels du pod)
    type: tito-fe
  type: LoadBalancer
