k8s/tito/tito-fe-ing-aws.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tito-dev
#  annotations:
#    ncp/rewrite_target: "/"
  labels:
    app: tito
    stage: dev
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
   - http:
       paths:
       - path: /tito/*
         backend:
           serviceName: titofe-service
           servicePort: 80
